# scriptlets

./: .gitignore  Makefile  README.md  bkg  bootstrap  copy-real-path  diff  encfs-local  extmon  extmon-start  extmon-stop  gh-mirror  ghpsd  git-config-parent  git-join-repos  git-merge-into  git-mmv  git-rsync  i4  i4c  imgdiff-bg  install  install-personalized  mail-after  make-install  n  pmake  retry  rpt  rstudio-here  soR  tbca  texstudio-here  xpra-attach-ssh
home/: .editorconfig  dot-Rprofile  dot-autoscreen  dot-bash_aliases  dot-bash_profile  dot-bashrc  dot-editorconfig  dot-finicky.js  dot-forward  dot-gitaliases  dot-gitconfig  dot-gitignore  dot-screenrc  dot-screenrc-xpra  dot-tigrc  dot-toprc  dot-vimrc
home/dot-config/diffuse/: diffuserc
home/dot-ssh/: config
home/git/: dot-gitconfig
home/git/R/: CMakeLists.txt  clion-build.sh  dot-Rprofile.local  dot-gitconfig
home/git/cynkra/: dot-gitconfig
obsolete/: README.md  disp  mail-after  tbca  undock  xpra-attach-ssh
personalized/cynkra/: gitconfig
personalized/kirill/: Rprofile  gitconfig  ssh-config
personalized/root/: gitconfig
scriptlets/kirill/: gitconfig
